adding initial UI add owner model

--- a/RobustaTask/RobustaTask/Base.lproj/Main.storyboard
+++ b/RobustaTask/RobustaTask/Base.lproj/Main.storyboard
@@ -14,9 +14,28 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="z8F-a4-eZL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="rgZ-da-z14"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="w8h-Vh-9iT"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="z8F-a4-eZL" secondAttribute="trailing" id="VSi-i0-WTX"/>
+                            <constraint firstItem="z8F-a4-eZL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cbs-rs-SrO"/>
+                            <constraint firstItem="z8F-a4-eZL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lPl-Fn-sA6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="z8F-a4-eZL" secondAttribute="bottom" id="oA1-G1-5il"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="z8F-a4-eZL" id="gNv-lO-9B5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
