--- a/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
+++ b/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
@@ -16,9 +16,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="406" height="146"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gC5-hb-aNe">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="gC5-hb-aNe">
                         <rect key="frame" x="10" y="20" width="100" height="100"/>
-                        <color key="backgroundColor" red="0.90196078430000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="100" id="mm2-Bm-043"/>
                             <constraint firstAttribute="width" constant="100" id="u34-Po-PrV"/>
@@ -76,10 +76,14 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="avatarImage" destination="gC5-hb-aNe" id="GoX-ML-AVU"/>
                 <outlet property="ownerName" destination="FXk-ci-yT8" id="aCZ-TL-xJA"/>
                 <outlet property="repoName" destination="Rnf-Hj-e5O" id="jW6-oG-evT"/>
             </connections>
             <point key="canvasLocation" x="200.00000000000003" y="51.5625"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="avatar" width="128" height="128"/>
+    </resources>
 </document>
