--- a/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
+++ b/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
@@ -45,8 +45,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-ci-yT8">
-                        <rect key="frame" x="266" y="85.5" width="42" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FXk-ci-yT8">
+                        <rect key="frame" x="266" y="85.5" width="115" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -60,6 +60,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="FXk-ci-yT8" firstAttribute="leading" secondItem="Rnf-Hj-e5O" secondAttribute="leading" id="3pm-71-e2V"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="FXk-ci-yT8" secondAttribute="trailing" constant="5" id="ExN-rE-u6G"/>
                     <constraint firstAttribute="bottom" secondItem="gC5-hb-aNe" secondAttribute="bottom" constant="20" id="HQ6-b3-Bs0"/>
                     <constraint firstItem="Rnf-Hj-e5O" firstAttribute="leading" secondItem="LhE-cV-P7M" secondAttribute="trailing" constant="10" id="UvK-dS-ec6"/>
                     <constraint firstItem="FXk-ci-yT8" firstAttribute="centerY" secondItem="wkN-Ok-DHp" secondAttribute="centerY" id="ZAT-6j-aCN"/>
