--- a/RobustaTask/RobustaTask/Base.lproj/Main.storyboard
+++ b/RobustaTask/RobustaTask/Base.lproj/Main.storyboard
@@ -15,9 +15,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="z8F-a4-eZL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="z8F-a4-eZL">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="rgZ-da-z14"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="w8h-Vh-9iT"/>
@@ -51,9 +51,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="roT-jY-hIp">
-                                <rect key="frame" x="10" y="94.5" width="394" height="200"/>
+                                <rect key="frame" x="10" y="94.5" width="394" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="gfQ-Z8-Ymd"/>
+                                    <constraint firstAttribute="height" constant="300" id="gfQ-Z8-Ymd"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxu-bx-DzU">
@@ -63,31 +63,31 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Owner:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zzr-vo-lNW">
-                                <rect key="frame" x="10" y="345.5" width="60" height="20.5"/>
+                                <rect key="frame" x="10" y="455.5" width="60" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gJ-ms-2c2">
-                                <rect key="frame" x="10" y="304.5" width="92.5" height="20.5"/>
+                                <rect key="frame" x="10" y="414.5" width="92.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Io5-c2-sYz">
-                                <rect key="frame" x="112.5" y="304.5" width="291.5" height="20.5"/>
+                                <rect key="frame" x="112.5" y="414.5" width="291.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZr-S8-V3F">
-                                <rect key="frame" x="90" y="345.5" width="324" height="20.5"/>
+                                <rect key="frame" x="90" y="455.5" width="324" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YVD-cf-ymZ">
-                                <rect key="frame" x="20" y="376" width="151.5" height="82"/>
+                                <rect key="frame" x="20" y="486" width="151.5" height="82"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CGd-TI-16c">
                                         <rect key="frame" x="0.0" y="0.0" width="151.5" height="20.5"/>
@@ -177,7 +177,7 @@
                             <constraint firstItem="hxu-bx-DzU" firstAttribute="top" secondItem="VKb-8a-sfN" secondAttribute="top" constant="10" id="Uno-dB-6wK"/>
                             <constraint firstItem="xZr-S8-V3F" firstAttribute="top" secondItem="Zzr-vo-lNW" secondAttribute="top" id="Zwn-QE-243"/>
                             <constraint firstItem="Zzr-vo-lNW" firstAttribute="top" secondItem="Io5-c2-sYz" secondAttribute="bottom" constant="20.5" id="i0b-Jm-XW4"/>
-                            <constraint firstItem="9gJ-ms-2c2" firstAttribute="top" secondItem="roT-jY-hIp" secondAttribute="bottom" constant="10" id="qkd-cc-td1"/>
+                            <constraint firstItem="9gJ-ms-2c2" firstAttribute="top" secondItem="roT-jY-hIp" secondAttribute="bottom" constant="20" id="qkd-cc-td1"/>
                             <constraint firstItem="hxu-bx-DzU" firstAttribute="leading" secondItem="VKb-8a-sfN" secondAttribute="leading" constant="10" id="tAl-hB-jgx"/>
                             <constraint firstItem="YVD-cf-ymZ" firstAttribute="top" secondItem="Zzr-vo-lNW" secondAttribute="bottom" constant="10" id="v8h-ji-2Cl"/>
                         </constraints>
