--- a/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
+++ b/RobustaTask/RobustaTask/Cells/DashboardTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DashboardTableViewCell" rowHeight="146" id="KGk-i7-Jjw" customClass="DashboardTableViewCell" customModule="RobustaTask" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DashboardTableViewCell" rowHeight="146" id="KGk-i7-Jjw" customClass="DashboardTableViewCell" customModule="RobustaTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="406" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -58,6 +58,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="FXk-ci-yT8" firstAttribute="leading" secondItem="Rnf-Hj-e5O" secondAttribute="leading" id="3pm-71-e2V"/>
                     <constraint firstAttribute="trailingMargin" secondItem="FXk-ci-yT8" secondAttribute="trailing" constant="5" id="ExN-rE-u6G"/>
@@ -75,6 +76,7 @@
                     <constraint firstItem="gC5-hb-aNe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="rrX-sn-NB9"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="avatarImage" destination="gC5-hb-aNe" id="GoX-ML-AVU"/>
